src/tests/routes/crates/snapshots/integration__routes__crates__delete__happy_path_old_crate-3.snap
---
source: src/tests/routes/crates/delete.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Successfully published foo@1.0.0
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

A new version of the foo crate was published by your account (https://crates.io/users/foo) at [0000-00-00T00:00:00Z].

View v1.0.0 here: https://crates.io/crates/foo/1.0.0

If you have questions or security concerns, you can contact us at help@crates.io. If you would like to stop receiving these security notifications, you can disable them in your account settings.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Hello foo!</p>

<p>A new version of the <strong>foo</strong> crate was published by your account (https:&#x2f;&#x2f;crates.io&#x2f;users&#x2f;foo) at [0000-00-00T00:00:00Z].</p>

<p>View v1.0.0 here: <a href="https://crates.io/crates/foo/1.0.0">https://crates.io/crates/foo/1.0.0</a></p>

<p>If you have questions or security concerns, you can contact us at <a href="mailto:help@crates.io">help@crates.io</a>. If you would like to stop receiving these security notifications, you can disable them in your account settings.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/crates/foo/1.0.0",
    "url": "https://crates.io/crates/foo/1.0.0",
    "name": "View Release"
  },
  "description": "View the newly published crate version",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--

----------------------------------------

To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Deleted "foo" crate
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hi foo,

Your "foo" crate has been deleted, per your request.

If you did not initiate this deletion, your account may have been compromised. Please contact us at help@crates.io.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Hi foo,</p>

<p>Your "<strong>foo</strong>" crate has been deleted, per your request.</p>

<p>If you did not initiate this deletion, your account may have been compromised. Please contact us at <a href="mailto:help@crates.io">help@crates.io</a>.</p>

<p>--<br>The crates.io Team</p>
--[boundary]--
